--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,8 +335,13 @@ main {
 
 
 .avatar-box {
-  background: hsl(330, 80%, 92%);
+  width: 80px;        /* match your desired avatar size */
+  height: 80px;
   border-radius: 20px;
+  overflow: hidden;  /* IMPORTANT: clips image to box */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .info-content .name {
@@ -1138,7 +1143,19 @@ textarea.form-input::-webkit-resizer { display: none; }
     width: calc(100% - 64px);
   }
 
+@media (min-width: 580px) {
+  .avatar-box {
+    width: 120px;
+    height: 120px;
+  }
+}
 
+@media (min-width: 1250px) {
+  .avatar-box {
+    width: 150px;
+    height: 150px;
+  }
+}
 
   /**
    * #NAVBAR
@@ -1587,7 +1604,11 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar-info { flex-direction: column; }
 
-  .avatar-box img { width: 150px; }
+  .avatar-box img .avatar-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* fills the box without distortion */
+}
 
   .info-content .name {
     white-space: nowrap;
